hub/manifests/hydra/02-hydra.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hydra
  namespace: hydra
spec:
  selector:
    matchLabels:
      app: hydra
  template:
    metadata:
      labels:
        app: hydra
    spec:
     containers:
        - name: hydra
          image: oryd/hydra:v2.0.3
          args:
            - serve
            - all
            - --dev

---
apiVersion: v1
kind: Service
metadata:
  name: hydra
  namespace: hydra
spec:
  selector:
    app: hydra
  ports:
    - name: public
      port: 80
      targetPort: 4444
    - name: admin
      port: 4445

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hydra
  namespace: hydra
spec:
  ingressClassName: traefik-lb
  rules:
    - host: sso.portal.docker.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hydra
                port:
                  name: public
